# AuraConvert

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
.github/workflows/: release.yml
.nezha/: config.toml
.trae/documents/: auraconvert-implementation-plan.md
.trae/rules/: git-commit-message.md  规则.md
docs/: COMMON_ERRORS.md  ChangeLog.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio_info.rs  convert.rs  ffmpeg.rs  file_ops.rs  mod.rs  window.rs
src-tauri/src/converter/: args_builder.rs  format_config.rs  mod.rs  smart_optimize.rs
src-tauri/src/ffmpeg/: detector.rs  mod.rs  parser.rs  runner.rs
src-tauri/src/models/: audio_file.rs  convert_params.rs  convert_result.rs  mod.rs
src-tauri/src/utils/: path_utils.rs
src/components/: AudioInfoDialog.tsx  ConvertButton.tsx  DropZone.tsx  FileItem.tsx  FileList.tsx  FormatSelector.tsx  Layout.tsx  ParamPanel.tsx  ProgressBar.tsx  SettingsPanel.tsx  ThemeToggle.tsx  TitleBar.tsx  Toast.tsx
src/hooks/: useAudioInfo.ts  useConversion.ts  useFFmpeg.ts  useKeyboardShortcuts.ts
src/i18n/: en.json  index.ts  zh.json
src/stores/: conversionStore.ts  settingsStore.ts  toastStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: ffmpegArgs.ts  fileUtils.ts  formatUtils.ts
