[package]
name = "aura-convert"
version = "1.1.8"
description = "A Lightweight & Professional Audio Converter Powered by Rust & Tauri"
authors = ["AuraConvert"]
edition = "2024"

[lib]
name = "aura_convert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
lofty = "0.21"
regex = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
